manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "triforktest-a29b"
    labels:
        app: "triforktest-a29b"
spec:
    type: LoadBalancer
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "triforktest-a29b"
